tests/errors/map_non_string_key.dang
# This should fail: map keys must be String!
pub result = [1: "a"]
